src/modules/shared/components/ProductCard/ProductCard.module.scss
@use '@styles/mixins/mixins' as mixins;
@use '@styles/variables/variables.scss' as vars;

.phoneCard {
  display: flex;
  flex-direction: column;
  align-items: start;
  flex-shrink: 0;
  gap: 8px;
  padding: 32px;

  border: 1px solid vars.$elements-color;
}

.imgContainer {
  width: 100%;
  aspect-ratio: 4 / 3;
}

.img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.linkTitleContainer {
  flex-grow: 1;
  text-decoration: none;
}

.cardTitle {
  @include mixins.text-style('body', false);
}

.priceContainer {
  display: flex;
  gap: 8px;
}

.price {
 @include mixins.text-style('h3', false);
}

.fullPrice {
  @include mixins.text-style('h3', false);
  font-weight: 600;
  color: vars.$secondary-color;
  text-decoration: line-through;
}

.specs {
  display: flex;
  flex-direction: column;
  gap: 8px;
  width: 100%;
}

.spec {
  display: flex;
  justify-content: space-between;
  @include mixins.text-style('small', false);

  &Title {
    color: vars.$secondary-color;
  }

  &Description{
    color: vars.$primary-color;
  }
}

.cardButtons {
  display: flex;
  justify-content: space-between;
  gap: 8px;
  width: 100%;
}

.addBtn {
  @include mixins.add-btn;
}

.favoritesBtn {
  @include mixins.favorites-btn
}

